Implement transforms for Fair Market Rents, Income Limits, and Homeless Counts
- Added Fair Market Rents transform (FY2024, FY2025)
- Added Income Limits transform (FY2024 Section 8 income limits)
- Added Point-in-Time Homeless Counts transform (2007-2024)
- Updated main.py to orchestrate transforms
- Uses python-calamine for Excel parsing (handles HUD's malformed xlsx files)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "requests",
     "deltalake>=0.17.0",
     "sqlalchemy>=2.0.43",
+    "openpyxl>=3.1.5",
+    "python-calamine>=0.6.1",
+    "pandas>=2.3.3",
 ]
 
 [tool.uv]
